<resources>
    <string name="app_name">AgrowwKavach</string>
    <string name="navigation_drawer_open">Navigation Drawer Open</string>
    <string name="navigation_drawer_close">Navigation Drawer Close</string>
    <string name="agroww_kavach">AGROWW KAVACH</string>

    <string name="amount_with_inr_symbol">\u20B9 %s</string>
    <string name="no_products_found">No Products Found</string>
    <string name="product_details">Product Details</string>
    <string name="view_all">View All</string>
    <string name="my_orders">My Orders</string>
    <string name="save_address">Save Address</string>
    <string name="add_new_address">Add New Shipping Address</string>
    <string name="saved_addresses">Saved Addresses</string>
    <string name="address_line1">Address Line1*</string>
    <string name="no_address_found"> No Shipping Address Found</string>
    <string name="postal_code">Postal Code</string>
    <string name="state_province_region">State / Province / Region*</string>
    <string name="country">Country*</string>
    <string name="your_name">Your name*</string>
    <string name="city_town_village">City / Town / Village*</string>
    <string name="address_line2">Address Line2*</string>
    <string name="edit">Edit</string>
</resources>