<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:fillViewport="true">

        <ImageView
            android:id="@+id/close_mark"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/close_vector"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/close_mark">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/office_building"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/background_with_more_radious"
                android:hint="@string/address_line1"
                android:inputType="text"
                android:padding="10dp" />

            <EditText
                android:id="@+id/address_line_2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/background_with_more_radious"
                android:hint="Address Line2*"
                android:padding="10dp" />

            <EditText
                android:id="@+id/city_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/background_with_stroke"
                android:hint="City / Town / Village*"
                android:padding="10dp" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/background_with_stroke"
                android:hint="Your name*"
                android:inputType="textEmailAddress"
                android:padding="10dp" />

            <EditText
                android:id="@+id/state"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/background_with_stroke"
                android:hint="State / Province / Region*"
                android:padding="10dp" />

            <EditText
                android:id="@+id/country"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/background_with_stroke"
                android:hint="Country*"
                android:padding="10dp" />

            <EditText
                android:id="@+id/postal_code"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/background_with_stroke"
                android:hint="Postal Code"
                android:inputType="number"
                android:padding="10dp" />

            <LinearLayout
                android:id="@+id/saveAddressCard"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_margin="@dimen/_8sdp"
                android:background="@drawable/bg_white_curved"
                android:gravity="center">

                <TextView
                    android:id="@+id/saveAddressButton"
                    style="@style/mediumTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/save_address"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold" />

            </LinearLayout>


        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>